--- a/weatherapp/templates/weatherapp/home.html
+++ b/weatherapp/templates/weatherapp/home.html
@@ -1,7 +1,13 @@
 <h1>Weather App</h1>
 
+<form action="" method="get">
+    <input type="text" name="name" id="">
+    <input type="submit" value="Add">
+   </form>
+   
 {{city}}
 <br />
-{{temp}}
+{{temp}} <span>&#8451;</span>
 <br />
+<img src="http://openweathermap.org/img/wn/{{ icon }}.png" alt="Icon" /><br />
 {{desc}}
