--- a/weatherapp/templates/weatherapp/home.html
+++ b/weatherapp/templates/weatherapp/home.html
@@ -1,13 +1,96 @@
-<h1>Weather App</h1>
+<!DOCTYPE html>
+<html lang="en">
 
-<form action="" method="get">
-    <input type="text" name="name" id="">
-    <input type="submit" value="Add">
-   </form>
-   
-{{city}}
-<br />
-{{temp}} <span>&#8451;</span>
-<br />
-<img src="http://openweathermap.org/img/wn/{{ icon }}.png" alt="Icon" /><br />
-{{desc}}
+<head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-
+1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+    <title>WeatherOfMine</title>
+</head>
+
+<body class="m-0 p-0">
+
+</body>
+
+<div class="messages">
+    {% if messages %}
+    <div class="">
+        {% for message in messages %}
+        <p{% if message.tags %} class="text-center alert alert-{{ message.tags  }}" {% endif %}>
+            {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}Important:
+            {% endif %}
+            {{ message }}
+            </p>
+            {% endfor %}
+            </ul>
+            {% endif %}
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+
+                <h1 class="d-2 text-center m-5">Weather App</h1>
+
+                <form class="d-grid gap-4 mb-5 shadow p-5" method="get">
+                    <input placeholder="City name" class="form-control mt-3" type="text" name="name" />
+                    <input class="btn btn-success mb-3" type="submit" value="Add" />
+                </form>
+
+            </div>
+        </div>
+    </div>
+
+
+
+
+
+
+    <!-- {% if messages %}
+    {% for message in messages %}
+    {{ message }} {% endfor %}
+    {% endif %}
+    <br /> -->
+    <div class="col-md-6 mt-0 mt-md-5">
+        <div class="container">
+
+            {% for city in city_data %}
+
+            <div class="row">
+                <div class="col-6">
+                    <h3>
+                        {{ city.city }}
+                    </h3>
+
+                    <span>
+                        {{ city.temp }}
+                        <span>&#8451;</span>
+
+                    </span>
+
+                    <div class="col-6">
+                        <h6>{{ city.desc }}</h6>
+                    </div>
+
+                    <div width="50px">
+
+                        <img src="http://openweathermap.org/img/w/{{ city.icon }}.png" alt="Icon" />
+
+                    </div>
+                    <button>
+                        <a href="{% url 'delete' city.city.id %}" class="btn btn-danger">Delete</a>
+                    </button>
+                    <hr />
+                    {% endfor %}
+
+                </div>
+
+            </div>
+
+        </div>
+    </div>
+
+
+</html>
